# FastAPI-RP

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.helm/: Chart.yaml  values.yaml
.helm/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  job.yaml  service.yaml
app/: main.py  models.py  repository.py
src/: main.py
src/api/: deps.py  routes.py
src/api/v1/: book.py  integrator.py
src/core/: config.py  enums.py  exceptions.py
src/db/: init_db.py
src/migrations/versions/: 4be1d987a517_add_book_models.py  6c502555b854_integrator_table.py  821872346a7a_add_create_at_to_integrator.py
src/models/: __init__.py  book.py  integrator.py
src/repositories/: book.py  integrator.py  sqlalchemy.py
src/schemas/: book.py  common.py  integrator.py
